# CppRemoteLearning

./: .gitignore  CMakeLists.txt  Design_patterns.docx  README.md  animal.cc  animal.h  calculator.h  client  client-factory.cc  client.cc  client.cpp  client.h  colleagueuniqueptr.h  count_today_requests.sh  data.xml  data_1.txt  data_2.txt  device.cpp  device.h  devices_and_sensors.cpp  devices_and_sensors.h  functions.cpp  getReqFromToday.sh  main.cc  main.cpp  max_digit.cpp  myuniqueptr.cpp  myuniqueptr.h  nr_of_requests_today.sh  product.cpp  product.h  room.cpp  room.h  rooms.cpp  rooms.h  sensor.cpp  sensor.h  server  server.cpp  server.h  (+13 more)
Devices/: acmode.h  acunit.cpp  acunit.h  device.cpp  device.h  devicestatus.h  door.cpp  door.h  lightbulb.cpp  lightbulb.h
Sensors/: humiditysensor.cpp  humiditysensor.h  lightsensor.cpp  lightsensor.h  presencesensor.cpp  presencesensor.h  sensor.cpp  sensor.h  temperaturesensor.cpp  temperaturesensor.h
client/: CMakeLists.txt  client.cc  client.cpp  client.h  main.cpp  message.cpp  message.h  smarthomeconnect.cpp  smarthomeconnect.h
client/utils/: clientUtils.h
custom_unique_ptr/: CMakeLists.txt  custom_unique_ptr.h  foo.h  test.cc
data_files/: data0.xml  data3.xml
devices/: AirConditioner.cc  AirConditioner.h  Device.cc  Device.h  Heater.cc  Heater.h  Light.cc  Light.h  Sensor.cc  Sensor.h  device.cpp  device.h  securitydevice.cpp  securitydevice.h  thermostatdevice.cpp  thermostatdevice.h  voicecontroldevice.cpp  voicecontroldevice.h
first_hw_classes/: device.cpp
headers/: deleter.h  device.h  device_ac_unit.h  device_fan.h  device_lightbulb.h  message.h  message_manager.h  room.h  sensor.h  sensor_humidity.h  sensor_light.h  sensor_temperature.h  smart_home.h  smart_home_manager.h  thread_pool.h  unique_ptr.h  unique_ptr_colleague.h
homework10/: design_patterns
homework3/: CMakeLists.txt  constructor.cpp  functions.cpp  main.cpp  two_numbers.h
house/: House.cc  House.h  Room.cc  Room.h
marc_pop_unique_ptr/: custom_unique_ptr.h
pointers/: unique_ptr.h
resources/: data1.txt  data2.txt  log.txt  status.txt  test1_1.txt  test2_1.txt  test3_1.txt  test4_1.txt  test_client_server.txt
sensors/: HumiditySensor.cc  HumiditySensor.h  MonoxidSensor.cc  MonoxidSensor.h  Sensor.cc  Sensor.h  TemperatureSensor.cc  TemperatureSensor.h  motionsensor.cpp  motionsensor.h  sensor.cpp  sensor.h  soundsensor.cpp  soundsensor.h  temperaturesensor.cpp
server/: CMakeLists.txt  andreea_unique_ptr  home1.txt  logFile.txt  main.cc  main.cpp  message.cpp  message.h  myuniqueptr.h  room.cpp  room.h  server.cc  server.cpp  server.h  smart_home.cpp  smart_home.h  smarthome.cpp  smarthomemanager.cpp  smarthomemanager.h  smarthomestatus.h  thread_pool.cpp  thread_pool.h  threadpool.cpp  threadpool.h
server/Devices/: acmode.h  acunit.cpp  acunit.h  device.cpp  devicestatus.h  door.cpp  lightbulb.h
server/Sensors/: action.h  humiditysensor.cpp  lightsensor.h  presencesensor.cpp  sensor.cpp  sensor.h  temperaturesensor.h
server/data_files/: LogFile.txt  data0.xml  data1.xml  data2.xml  data4.xml
server/devices/: AirConditioner.cc  AirConditioner.h  Device.cc  Device.h  Heater.cc  Heater.h  Light.cc  Light.h  device.h  securitydevice.h  thermostatdevice.cpp  voicecontroldevice.h
server/first_hw_classes/: sensor.cpp  sensor.h
server/house/: House.cc  House.h  Room.cc  Room.h
server/logs/: count_today_requests.sh  requests_log.txt
server/sensors/: HumiditySensor.cc  HumiditySensor.h  MonoxidSensor.cc  MonoxidSensor.h  Sensor.cc  Sensor.h  TemperatureSensor.cc  TemperatureSensor.h  sensor.cpp  sensor.h  temperaturesensor.h
server/serialization/: Message.h
server/server/: ClientHandler.cc  ClientHandler.h  Server.cc  Server.h
server/user/: User.cc  User.h
server/utils/: StatusPrinter.h  enums.h  serverUtils.cc  serverUtils.h
smart_home/: CMakeLists.txt
smart_home/include/custom_memory/: unique_ptr_colleague.h
smart_home/include/devices/: ac_unit.h  device.h  fan.h  light_bulb.h
smart_home/include/rooms/: room.h
smart_home/include/sensors/: light_sensor.h  presence_sensor.h  sensor.h  temperature_sensor.h
smart_home/include/services/: light_service.h  presence_service.h  service.h  status_service.h  temperature_service.h
smart_home/resources/: read_document.xml  write_document.xml
smart_home/src/: main.cc
smart_home/src/devices/: ac_unit.cc  device.cc  fan.cc  light_bulb.cc
smart_home/src/rooms/: room.cc
smart_home/src/sensors/: sensor.cc
smart_home/src/services/: light_service.cc  presence_service.cc  service.cc  status_service.cc  temperature_service.cc
smart_home/src/tiny_xml/: tinyxml2.cpp
sources/: device.cpp  device_ac_unit.cpp  device_fan.cpp  device_lightbulb.cpp  message_manager.cpp  room.cpp  sensor.cpp  sensor_humidity.cpp  sensor_light.cpp  sensor_temperature.cpp  smart_home.cpp  smart_home_manager.cpp  thread_pool.cpp
tema1/: calculator.cpp  cmmdc.cpp
user/: User.cc  User.h
utils/: StatusPrinter.cc  StatusPrinter.h  enums.h
